<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/appwidget_text"
        android:layout_marginBottom="8dp"
        android:text="@string/url" />

    <EditText
        android:id="@+id/appwidget_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add_button"
        android:layout_marginBottom="8dp"
        android:autofillHints="@string/http_nevbros_ru"
        android:hint="@string/http_nevbros_ru"
        android:inputType="text"
        android:text="@string/http" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:gravity="bottom"
        android:text="@string/footer"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_centerVertical="true"
        android:text="@string/choose" />

</RelativeLayout>